--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,33 +3,33 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_loc"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="Ma position" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_1"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Café et Sallon de thé" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_2"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Restaurent" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_3"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Hotel" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Configuration">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_4"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="Services" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_5"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Deconnecter" />
         </menu>
     </item>
 
